<resources>
    <string name="app_name">Secret Diary</string>
    <string name="date">Date</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="submit">Submit</string>
    <string name="delete">Delete</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="tab_text_1">Home</string>
    <string name="tab_text_2">Calender</string>
    <string name="tab_text_3">MOOD</string>
    <string name="pengaturan">Setelan</string>
    <string name="key_name">name</string>
    <string name="nothing">Tidak Ada</string>
    <string name="name">Nama</string>
    <string name="key_email">email</string>
    <string name="email">Email</string>

    <string name="one_time_alarm">One Time Alarm</string>
    <string name="alarm_date">Tanggal Alarm</string>
    <string name="set_one_time_alarm">Set One Time Alarm</string>
    <string name="alarm_message">Pesan Alarm</string>
    <string name="repeating_alarm">Repeating Alarm</string>
    <string name="set_repeating_alarm">Set Repeating Alarm</string>
    <string name="cancel_alarm">Batalkan Alarm</string>
    <string name="alarm_time">Waktu Alarm</string>

    <string name="menu1">Menu 1</string>
    <string name="menu2">Menu 2</string>

</resources>